# lovable_parser

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml
src/lovable_parser/: __init__.py  parser.py
tests/: conftest.py  test_parser.py
